# src/main/resources/swagger/webshop_swagger.yaml
@@ -82,6 +82,36 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Product not found"
+    put:
+      tags:
+        - "product"
+      summary: "update product"
+      description: "Updates and returns a single product"
+      operationId: "updateProductById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "productId"
+          in: "path"
+          description: "ID of product to return"
+          required: true
+          type: "integer"
+          format: "int64"
+        - in: "body"
+          name: "body"
+          description: "new values"
+          required: true
+          schema:
+            $ref: "#/definitions/Product2Create"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Product"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Product not found"
 definitions:
   Product2Create:
     type: "object"
